# roboreg

./: .gitignore  Dockerfile  LICENSE  NOTICE  README.md  demo.py  env.yaml  pyproject.toml  requirements.txt  setup.py
.docker/: Dockerfile  cuda-12.4.1-runtime-ubuntu-22.04.Dockerfile  cuda-12.4.1-runtime-ubuntu22.04.Dockerfile  cuda-12.4.1-ubuntu-22.04.Dockerfile  cuda-13.1.0-runtime-ubuntu-24.04.Dockerfile  cuda-13.1.0-ubuntu-24.04.Dockerfile  devel.Dockerfile  hydra-icp.Dockerfile  runtime.Dockerfile
.github/workflows/: docker.yaml  publish.yaml  tests.yaml
cli/: rr_cam_swarm.py  rr_hydra.py  rr_mono_dr.py  rr_render.py  rr_sam2.py  rr_stereo_dr.py
cli/util/: validate.py
roboreg/: detector.py  hydra_icp.py  instance_icp.py  io.py  losses.py  meshify_robot.py  o3d_register.py  o3d_robot.py  ray_cast.py  register.py  register_point_cloud_legacy.py  segmentor.py  util.py
roboreg/cli/: rr_cam_swarm.py  rr_hydra.py  rr_mono_dr.py  rr_render.py  rr_sam.py  rr_sam2.py  rr_segment.py  rr_stereo_dr.py
roboreg/core/: __init__.py  rendering.py  robot.py  structs.py
roboreg/diff_rend/: util.py
roboreg/differentiable/: __init__.py  data_structures.py  kinematics.py  render.py  renderer.py  rendering.py  robot.py  scene.py  structs.py
roboreg/io/: __init__.py  datasets.py  filesystem.py  meshes.py  parsers.py  robot_data.py
roboreg/optim/: __init__.py  camera_swarm.py  particle_swarm.py
roboreg/util/: __init__.py  factories.py  mask.py  points.py  sampling.py  transform.py  viz.py
scripts/: common.py  cross_validate_hydra.py  distance_map_min.py  distance_map_min_backup.py  generate_masks.py  generate_views.py  image_to_video.py  kaolin_render.py  nvdiffrast_render.py  re_project.py  register_hydra_robust_icp.py  render_robot.py  visualize_masks.py
scripts/ros2_stuff_that_shouldnt_be_here/: common.py  process_rosbag.py  static_transform_pub.py  zed_camera_frame_to_world.py
test/: common.py  test_dae_to_obj_exporter.py  test_data.py  test_detector.py  test_diff_distance_field.py  test_diff_render.py  test_diff_renderer.py  test_diff_robot_scene.py  test_distance_map.py  test_hydra_icp.py  test_hydra_projection.py  test_hydra_robust_icp.py  test_hydra_robust_icp_with_cast.py  test_instance_icp.py  test_io.py  test_kaolin_render.py  test_lie_group.py  test_load_mesh.py  test_meshify_robot.py  test_o3d_register.py  test_o3d_robot.py  test_parse_camera_info.py  test_ray_casting.py  test_register.py  test_render_robot.py  test_segmentor.py  test_torch_kinematics.py  test_torch_mesh_container.py  test_torch_robot_mesh.py  test_util.py
test/assets/lbr_med7_r800/description/: lbr_med7_r800.urdf
test/assets/lbr_med7_r800/samples/: HT_cam_swarm.npy  HT_dr.npy  HT_hydra.npy  HT_hydra_robust.npy  HT_left_dr.npy  HT_right_dr.npy  HT_right_to_left.npy  depth_0.npy  depth_1.npy  depth_2.npy  depth_3.npy  depth_4.npy  joint_states_0.npy  joint_states_1.npy  joint_states_2.npy  joint_states_3.npy  joint_states_4.npy  left_camera_info.yaml  left_image_0_samples.csv  left_image_1_samples.csv  left_image_2_samples.csv  left_image_3_samples.csv  left_image_4_samples.csv  right_camera_info.yaml  (+5 more)
test/core/: test_kinematics.py  test_rendering.py  test_robot.py  test_scene.py  test_structs.py
test/data/: joint_state_0.npy  joint_state_13.npy  rgba_0.npy  rgba_11.npy  rgba_14.npy  rgba_4.npy  samples.csv  xyz_0.npy  xyz_12.npy  xyz_16.npy  xyz_3.npy
test/data/high_res/: HT.npy  HT_base_cam_optimal_new.npy  HT_hydra_robust.npy  joint_state_3.npy  joint_state_6.npy  left_camera_info.yaml  rgba_1.npy  rgba_2.npy
test/data/low_res/: HT.npy  joint_state_1.npy  joint_state_15.npy  joint_state_16.npy  joint_state_2.npy  joint_state_3.npy  joint_state_6.npy  joint_state_7.npy  rgba_1.npy  rgba_10.npy  rgba_12.npy  rgba_13.npy  rgba_15.npy  rgba_2.npy  rgba_6.npy  rgba_7.npy  rgba_9.npy  xyz_1.npy  xyz_10.npy  xyz_2.npy  xyz_7.npy  xyz_8.npy  xyz_9.npy
test/data/mesh/: link_0.mtl
test/data/xarm/: depth_0.npy  depth_1.npy  depth_5.npy  joint_states_0.npy  joint_states_2.npy  joint_states_5.npy
test/differentiable/: test_kinematics.py  test_rendering.py  test_robot.py  test_scene.py  test_structs.py
test/io/: test_meshes.py  test_parsers.py
test/optim/: test_camera_swarm.py  test_particle_swarm.py
test/util/: test_mask.py  test_points.py  test_sampling.py  test_transform.py  test_viz.py
(+180 files in other folders)
