[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roboreg"
version = "0.4.0"
authors = [
  { name="mhubii", email="m.huber_1994@hotmail.de" },
]
description = "Unified eye-in-hand / eye-to-hand calibration from RGB-D images using robot mesh as calibration target."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "faiss-gpu",
  "huggingface_hub",
  "pytest",
  "pytorch-kinematics",
  "pyvista",
  "ninja",
  "numpy",
  "nvdiffrast@git+https://github.com/NVlabs/nvdiffrast.git",
  "opencv-python",
  "rich",
  "SAM-2@git+https://github.com/facebookresearch/segment-anything-2.git",
  "segment_anything@git+https://github.com/facebookresearch/segment-anything.git",
  "torch",
  "transformations",
  "trimesh",
  "xacro",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC BY-NC 4.0 Deed",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lbr-stack/roboreg"
Issues = "https://github.com/lbr-stack/roboreg/issues"

[project.scripts]
rr-hydra = "roboreg.cli.rr_hydra:main"
rr-render = "roboreg.cli.rr_render:main"
rr-sam = "roboreg.cli.rr_sam:main"
rr-sam2 = "roboreg.cli.rr_sam2:main"
rr-stereo-dr = "roboreg.cli.rr_stereo_dr:main"
