[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roboreg"
version = "0.4.6"
authors = [
  {name="mhubii", email="m.huber_1994@hotmail.de"},
  {name="haydnspass", email="lucasraphael.mueller@gmail.com"},
]
maintainers = [
  {name = "mhubii", email = "m.huber_1994@hotmail.de"},
  {name="haydnspass", email="lucasraphael.mueller@gmail.com"},
]
description = "Unified eye-in-hand / eye-to-hand calibration from RGB-D images using robot mesh as calibration target."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "diffrp-nvdiffrast",
  "fast_simplification",
  "huggingface_hub",
  "pycollada",
  "pytest",
  "pytorch-kinematics>=0.7.4",
  "pyvista",
  "ninja",
  "numpy",
  "opencv-python",
  "rich",
  "sam2",
  "torch",
  "transformations",
  "trimesh",
  "xacro",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/lbr-stack/roboreg"
Issues = "https://github.com/lbr-stack/roboreg/issues"

[project.scripts]
rr-cam-swarm = "roboreg.cli.rr_cam_swarm:main"
rr-hydra = "roboreg.cli.rr_hydra:main"
rr-mono-dr = "roboreg.cli.rr_mono_dr:main"
rr-render = "roboreg.cli.rr_render:main"
rr-sam2 = "roboreg.cli.rr_sam2:main"
rr-stereo-dr = "roboreg.cli.rr_stereo_dr:main"
