[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "roboreg"
dynamic = ["version"]
authors = [
  {name="mhubii", email="m.huber_1994@hotmail.de"},
  {name="haydnspass", email="lucasraphael.mueller@gmail.com"},
]
maintainers = [
  {name="mhubii", email="m.huber_1994@hotmail.de"},
  {name="haydnspass", email="lucasraphael.mueller@gmail.com"},
]
description = "Unified eye-in-hand / eye-to-hand calibration from RGB-D images using robot mesh as calibration target."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "diffrp-nvdiffrast",
  "fast_simplification",
  "huggingface_hub",
  "pycollada",
  "pytest",
  "pytorch-kinematics>=0.7.4",
  "pyvista",
  "ninja",
  "numpy",
  "opencv-python",
  "rich",
  "sam2",
  "torch",
  "transformations",
  "trimesh",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/lbr-stack/roboreg"
Issues = "https://github.com/lbr-stack/roboreg/issues"

[project.scripts]
rr-cam-swarm = "cli.rr_cam_swarm:main"
rr-hydra = "cli.rr_hydra:main"
rr-mono-dr = "cli.rr_mono_dr:main"
rr-render = "cli.rr_render:main"
rr-sam2 = "cli.rr_sam2:main"
rr-stereo-dr = "cli.rr_stereo_dr:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["roboreg*", "cli*"]
exclude = ["test*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
